--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ first_name: Max
 middle_name:
 last_name: Frank
 email: max.florian.frank@gmail.com
-description:  # the ">" symbol means to ignore newlines until "footer_text:"
-footer_text: 
-keywords: bioinformatics, statistical-modeling, academic-website, personal-website # add your own keywords or leave empty
+description: Computational Biologist # the ">" symbol means to ignore newlines until "footer_text:"
+footer_text:
+keywords: heidelberg, stegle, bioinformatics, statistical-modeling, academic-website, personal-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
@@ -118,7 +118,7 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-# blog_name: al-folio # blog_name will be displayed in your blog page
+# blog_name: # blog_name will be displayed in your blog page
 # blog_description: a simple whitespace theme for academics
 # permalink: /blog/:year/:title/
 
@@ -314,7 +314,24 @@ enable_publication_badges:
 
 # Filter out certain bibtex entry keywords used internally from the bib output
 filtered_bibtex_keywords:
-  [abbr, abstract, altmetric, arxiv, bibtex_show, blog, code, html, pdf, poster, preview, selected, slides, supp, video, website]
+  [
+    abbr,
+    abstract,
+    altmetric,
+    arxiv,
+    bibtex_show,
+    blog,
+    code,
+    html,
+    pdf,
+    poster,
+    preview,
+    selected,
+    slides,
+    supp,
+    video,
+    website,
+  ]
 
 # Maximum number of authors to be shown for each publication (more authors are visible on click)
 max_author_limit: 3 # leave blank to always show all authors
