--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,9 +2,9 @@
   type: map
   contents:
     - name: Full Name
-      value: Max Frank
+      value: Albert Einstein
     - name: Date of Birth
-      value: 16th February 1993
+      value: 14th March 1879
     - name: Languages
       value: English, German
 
@@ -12,8 +12,8 @@
   type: time_table
   contents:
     - title: PhD
-      institution: [EMBL Heidelberg](https://www.embl.org/) and [University of Heidelberg](https://www.uni-heidelberg.de/en)
-      year: 2024
+      institution: University of Zurich, Zurich, Switzerland
+      year: 1905
       description:
         - Description 1.
         - Description 2.
