--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: Computational Biologist # the ">" symbol means to ignore newlines u
 footer_text:
 keywords: heidelberg, stegle, bioinformatics, statistical-modeling, academic-website, personal-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: ⚛ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: favicon.ico # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://mffrank.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
